--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ diff-match-patch==20200713
 Django==3.1
 django-admin-tools==0.9.0
 django-ckeditor==6.0.0
+django-cors-headers==3.5.0
 django-debug-toolbar==2.2
 django-filter==2.3.0
 django-import-export==2.3.0
 django-js-asset==1.2.2
+django-modeltranslation==0.15.2
 django-mptt==0.11.0
 django-rest-multiple-models==2.1.3
 django-taggit==1.3.0
@@ -24,6 +26,7 @@ psycopg2-binary==2.8.6
 python-decouple==3.3
 pytz==2020.1
 PyYAML==5.3.1
+six==1.15.0
 sqlparse==0.3.1
 tablib==2.0.0
 xlrd==1.2.0
