--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.2",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
+    "qonfucius-nuxt-fontawesome": "^1.0.1",
     "sass-loader": "^10.0.2"
   },
   "devDependencies": {
