--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
-    "nuxt-vuex-localstorage": "^1.2.7",
-    "qonfucius-nuxt-fontawesome": "^1.0.1",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
