--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
     "sass-loader": "^10.0.2",
+    "vue-notifications": "^1.0.2",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
