--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-mptt==0.11.0
 django-rest-multiple-models==2.1.3
 django-taggit==1.3.0
 djangorestframework==3.11.1
+djangorestframework-recursive==0.1.2
 et-xmlfile==1.0.1
 jdcal==1.4.1
 MarkupPy==1.14
