--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "@nuxtjs/axios": "^5.12.2",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
+    "nuxt-jsonld": "^1.5.0",
+    "nuxt-uid-module": "^0.2.0",
     "sass-loader": "^10.0.2",
+    "uuid": "^8.3.2",
     "vue-notifications": "^1.0.2",
     "vuex-persist": "^3.1.3"
   },
@@ -24,7 +27,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^4.0.0"
   }
 }
