--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
+    "nuxt-i18n": "^6.18.0",
     "nuxt-jsonld": "^1.5.0",
     "nuxt-uid-module": "^0.2.0",
     "sass-loader": "^10.0.2",
