--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxt/types": "^2.15.2",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/gtm": "^2.4.0",
+    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.18.0",
