--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@nuxt/types": "^2.15.2",
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "node-sass": "^4.14.1",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.15.2",
     "nuxt-i18n": "^6.18.0",
     "nuxt-jsonld": "^1.5.0",
     "nuxt-uid-module": "^0.2.0",
@@ -29,6 +29,7 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
