--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/robots": "^2.4.2",
     "cookie-universal-nuxt": "^2.1.4",
+    "lodash.startcase": "^4.4.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.2",
     "nuxt-i18n": "^6.18.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@types/lodash.startcase": "^4.4.6",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
